--- a/lesson5/index.html
+++ b/lesson5/index.html
@@ -26,7 +26,8 @@
     <p>
         Написать функцию, преобразующую число в объект. Передавая на вход число от 0 до 999, мы должны получить на выходе объект, в котором в соответствующих свойствах описаны единицы, десятки и сотни. Например для числа 245 мы должны получить следующий объект: {‘единицы’: 5, ‘десятки’: 4, 'сотни’: 2}. Если число превышает 999, необходимо выдать соответствующее сообщение с помощью console.log и вернуть пустой объект.
     </p>
-    <input type="button" onclick="showFunc(2);" value="Show 2nd">
+    <input type="number" id="numbfor2" value="999">
+    <input type="button" onclick="showFunc(2); showDiv()" value="Show 2nd">
     <p>
     <h4>Exercise 3</h4>
     <p>
